--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <version>1.7.24</version>
         </dependency>
 
+        <!-- redis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
